html outline and gitignore

--- a/index.html
+++ b/index.html
@@ -5,16 +5,53 @@
 <head>
     <meta charset="UTF-8" />
 
-    <title> Run Buddy </title>
+    <title> RUN BUDDY </title>
 
 </head>
 
 <body>
 
-    <h2> RUN BUDDY </h2>
+<!-- navigation -->
+<header>
 
-    What we do What you do Your Trainers Reach Out
-        
+    <h1> Run Buddy </h1>
+
+</header>
+
+<!-- hero/jumotron -->
+
+<section>
+
+</section>
+
+<!-- "what we do" section -->
+<section>
+    <h2> What We Do </h2>
+</section>
+
+<!-- "what you do" section -->
+
+<section>
+    <h2> What You Do </h2>
+</section>
+ 
+<!-- "meet the trainers" section -->
+
+<section>
+    <h2> Meet The Trainers </h2>
+</section>
+
+<!-- "reach out" section -->
+
+<section>
+    <h2> Reach Out </h2>
+</section>
+
+<!-- footer -->
+
+<footer>
+    <h2> ❤️ Made with love by Run Buddy ❤️ </h2>
+</footer>
     </body>
     
 </html>
