adding css and modifying index

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 
 <head>
     <meta charset="UTF-8" />
+    
+    <title>RUN BUDDY</title>
 
-    <title> RUN BUDDY </title>
+<link rel="runbuddystyle" href="./assets/css/runbuddystyle.css" />
 
 </head>
 
