proper html - css linking

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>RUN BUDDY</title>
 
-<link rel="runbuddystyle" href="./assets/css/runbuddystyle.css" />
+<link rel="stylesheet" href="./assets/css/runbuddystyle.css" />
 
 </head>
 
