--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
 
 <footer>
     <h2> ❤️ Made with love by Run Buddy ❤️ </h2>
+    <div>
+        <a href="#">Read our Privacy Policy</a><br />
+        &copy; 2019 Run Buddy, Inc.
+    </div>
 </footer>
     </body>
     
