commit before beginning 1.4.4

--- a/index.html
+++ b/index.html
@@ -106,14 +106,35 @@
 <!-- end hero -->
 
 <!-- "what we do" section -->
-<section>
+<section id="what-we-do">
     <h2> What We Do </h2>
+
+    <p> 
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eum quibusdam animi beatae totam, id facilis! Assumenda nostrum aspernatur nam deserunt? Velit, numquam at. Asperiores deserunt dolorum tempore quidem reiciendis. 
+    </p>
 </section>
 
 <!-- "what you do" section -->
 
-<section>
+<section id="what-you-do">
     <h2> What You Do </h2>
+    
+    <div>
+        <img src="./assets/images/step-1.svg" alt="" />
+        <h3> Step 1: Fill out the form above. </h3>
+        <p> You're already here, so why not? </p>
+    </div>
+
+    <div>
+        <h3> Step 2: Consoult with one of our Trainers. </h3>
+        <p> Are you here to build muscle, lose weight, or just feel good? </p>
+    </div>
+
+    <div> 
+        <h3> Step 3: Get Running.</h3>
+        <p> Bi-Weekly check-ins with your Trainer will keep you focus. </p>
+    </div>
+
 </section>
  
 <!-- "meet the trainers" section -->
