add what you do icons

--- a/index.html
+++ b/index.html
@@ -126,13 +126,21 @@
     </div>
 
     <div>
+        <img= src="./assets/images/step-2.svg" alt="" />
         <h3> Step 2: Consoult with one of our Trainers. </h3>
         <p> Are you here to build muscle, lose weight, or just feel good? </p>
     </div>
 
-    <div> 
+    <div>
+        <img src="./assets/images/step-3.svg" alt="" />
         <h3> Step 3: Get Running.</h3>
-        <p> Bi-Weekly check-ins with your Trainer will keep you focus. </p>
+        <p> Hit the ground running (literally) once your trainer lays out your plan. </p>
+    </div>
+
+    <div>
+        <img src="./assets/images/step-4.svg" alt="" />
+        <h3> Step 4: See Results. </h3>
+        <p> Bi-Weekly check-ins with your Trainer will keep you focused. </p>
     </div>
 
 </section>
