finalized version run buddy from lesson 1.4.7

--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 <!-- end hero -->
 
 <!-- "what we do" section -->
-<section id="what-we-do">
-    <h2> What We Do </h2>
+<section id="what-we-do" class="intro" >
+    <h2 class="section-title primary-border"> What We Do </h2>
 
     <p> 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eum quibusdam animi beatae totam, id facilis! Assumenda nostrum aspernatur nam deserunt? Velit, numquam at. Asperiores deserunt dolorum tempore quidem reiciendis. 
@@ -116,12 +116,12 @@
 
 <!-- "what you do" section -->
 
-<section id="what-you-do">
-    <h2> What You Do </h2>
+<section id="what-you-do" class="steps">
+    <h2 class="section-title secondary-border"> What You Do </h2>
     
     <div>
         <img src="./assets/images/step-1.svg" alt="" />
-        <h3> Step 1: Fill out the form above. </h3>
+        <h3> Step 1: <span> Fill out the form above. </span> </h3>
         <p> You're already here, so why not? </p>
     </div>
 
