alomst there commit!

--- a/index.html
+++ b/index.html
@@ -147,14 +147,70 @@
  
 <!-- "meet the trainers" section -->
 
-<section>
-    <h2> Meet The Trainers </h2>
+<section id="your-trainers" class="trainers">
+    <h2 class="section-title primary-border">
+        
+        Meet The Trainers 
+
+    </h2>
+    
+    <article class="trainer">
+        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready tp pump iron" />
+        <div class="trainer-bio text-left">
+            <h3> Arron Stephens </h3>
+            <h4> Speed / Strength </h4>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis qui iusto adipisci voluptatem modi voluptas quam ut inventore excepturi, assumenda laborum officiis fugit rerum. Quo, aperiam. Veritatis ipsam incidunt adipisci?
+            </p>
+        </div>
+    </article>
+
+    <article class="trainer">
+        <div class="trainer-bio text-right">
+            <h3> Joanna Gill </h3>
+            <h4> Endurance </h4>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit atque enim voluptatem aut, quaerat eveniet mollitia nulla illum dicta, cumque at porro laudantium doloribus dolorum nam obcaecati esse iusto ullam!
+            </p>
+        </div>
+        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+    </article>
+
+    <article class="trainer">
+         <div class="trainer-bio text-left">
+            <h3>Harry "The Headband" Smith</h3>
+            <h4> Strength </h4>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit in corporis perferendis iste animi quod, totam aliquid ut eaque minus fugiat dolores et voluptates assumenda tenetur iure dolor voluptatum pariatur!
+            </p>
+         </div>
+         <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+    </article>
 </section>
 
 <!-- "reach out" section -->
 
 <section>
     <h2> Reach Out </h2>
+    <div class="contact-info">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3143.3932896600113!2d-78.40000908255615!3d38.01460979999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b3894282e81d51%3A0xd66f56538f3942b2!2s2981%20Richmond%20Rd%2C%20Charlottesville%2C%20VA%2022911!5e0!3m2!1sen!2sus!4v1653420288054!5m2!1sen!2sus" 
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div>
+    <h3> Run Buddy </h3>
+    <p>
+        Any questions or concerns before signing up?
+        <br />
+        Let us know and we'll be happy to talk to you!
+    </p>
+    <address>
+        2981 Richmond Road <br />
+        Charlottesville, VA <br />
+        22901 <br />
+        Phone: 877.RUN.BUDY (877.786.2839) <br />
+        Email: <a href="mailto:info@runbuddy.io">info@runbuddy.com</a>
+    </address>
+    </div>
 </section>
 
 <!-- footer -->
