--- a/index.html
+++ b/index.html
@@ -190,20 +190,20 @@
 
 <!-- "reach out" section -->
 
-<section>
-    <h2> Reach Out </h2>
+<section id="reach-out" class="contact-info">
+    <h2 class="contact section-title primary-border"> Reach Out </h2>
     <div class="contact-info">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3143.3932896600113!2d-78.40000908255615!3d38.01460979999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b3894282e81d51%3A0xd66f56538f3942b2!2s2981%20Richmond%20Rd%2C%20Charlottesville%2C%20VA%2022911!5e0!3m2!1sen!2sus!4v1653420288054!5m2!1sen!2sus" 
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <div>
-    <h3> Run Buddy </h3>
-    <p>
+    <h3 class="info"> Run Buddy </h3>
+    <p class="contact-info">
         Any questions or concerns before signing up?
         <br />
         Let us know and we'll be happy to talk to you!
     </p>
-    <address>
+    <address class="contact-info">
         2981 Richmond Road <br />
         Charlottesville, VA <br />
         22901 <br />
